# v6d

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst
.github/workflows/: build-repo-tarball.yaml  build-test.yml  build-vineyardd-and-wheels-linux.yaml  docs.yaml  kubernetes-operator.yaml
benchmark/: alloc_bench.h  bench_allocator.cc
benchmark-x/: alloc_test.h  bench_allocator.cc
charts/: create-vineyard-ns.sh
charts/vineyard/: values.yaml
charts/vineyard/templates/: daemonset.yaml  etcd.yaml
docs/tutorials/: flower-classification.ipynb  fraud-detection-tutorial.ipynb
go/vineyard/: Makefile  go.mod  go.sum
go/vineyard/pkg/client/: blob.go  client_base.go  ipc_client.go  ipc_client_test.go  object_meta.go  rpc_client.go
go/vineyard/pkg/common/: protocol.go  status.go
go/vineyard/pkg/common/memory/: slice.go
go/vineyard/pkg/common/types/: id.go  payload.go
go/vineyard/pkg/ds/basic/: array.go
java/: pom.xml
java/core/src/main/java/io/v6d/core/common/util/: Protocol.java
java/spark/: pom.xml
java/spark/src/main/scala/io/v6d/spark/: SparkApp.scala
java/spark/src/main/scala/org/apache/spark/graphx/: CSVGraphLoader.scala
java/spark/src/main/scala/org/apache/spark/sql/vineyard/: ArrowContext.scala
k8s/: Makefile  controller.yaml  env.yaml  vineyardd.yaml
k8s/config/default/: kustomization.yaml
k8s/config/manager/: kustomization.yaml  manager.yaml
k8s/config/scheduler/: config.yaml
modules/basic/ds/: arrow.h
modules/fuse/: CMakeLists.txt  fused.cc  fusermount.cc
modules/fuse/adaptors/: arrow.cc  arrow.h  csv.cc  csv.h  formats.h  hdf5.cc  hdf5.h  parquet.cc
modules/fuse/test/: fuse_test.py
modules/graph/fragment/: arrow_fragment.h  arrow_fragment.vineyard-mod
modules/graph/loader/: arrow_fragment_loader.cc  arrow_fragment_loader.h  basic_ev_fragment_loader.h  gar_fragment_loader.cc  gar_fragment_loader_impl.h
modules/graph/utils/: table_shuffler.cc  table_shuffler_impl.cc
modules/graph/vertex_map/: arrow_vertex_map.h
modules/graph/writer/: arrow_fragment_writer_impl.h
modules/hosseinmoein-dataframe/: CMakeLists.txt  hosseinmoein_dataframe.h
modules/io/io/: local_io_adaptor.cc
modules/io/python/drivers/io/adaptors/: read_bytes.py
modules/malloc/: CMakeLists.txt
modules/msgpack/: CMakeLists.txt  packed_object.cc  packed_object.h  vbuffer.cc  vbuffer.h
modules/msgpack/test/: msgpack_test.cc
python/vineyard/contrib/ml/: pytorch.py
python/vineyard/core/: builder.py
python/vineyard/data/: arrow.py  utils.py
rust/: Cargo.toml
rust/vineyard/: Cargo.toml
rust/vineyard-integration-testing/: Cargo.toml
rust/vineyard-integration-testing/src/: lib.rs
rust/vineyard-polars/: Cargo.toml
rust/vineyard-polars/src/ds/: dataframe.rs  mod.rs
rust/vineyard/src/: lib.rs
rust/vineyard/src/client/: ipc_client.rs  ipc_client_test.rs
rust/vineyard/src/client/ds/: blob.rs  object.rs  object_meta.rs
rust/vineyard/src/common/util/: arrow.rs  status.rs  typename.rs
rust/vineyard/src/ds/: array.rs  arrow.rs  arrow_test.rs  arrow_utils.rs  dataframe.rs  mod.rs  tensor.rs
src/client/: client.cc  client.h
src/common/backtrace/: backtrace.hpp
src/common/memory/: jemalloc.cc
src/common/util/: protocols.cc  protocols.h  status.h
src/server/memory/: memory.cc
src/server/server/: vineyard_server.cc  vineyard_server.h
src/server/services/: etcd_meta_service.cc  etcd_meta_service.h  meta_service.cc  meta_service.h
src/server/util/: etcd_launcher.cc  etcd_launcher.h  spec_resolver.cc  spec_resolvers.cc
test/: runner.py
