[package]
name = "vineyard-polars"
version = "0.16.2"
description = "Vineyard Rust SDK"
homepage = "https://github.com/v6d-io/v6d"
repository = "https://github.com/v6d-io/v6d"
license = "Apache-2.0"
keywords = [ "vineyard" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard_polars"
path = "src/lib.rs"

[dependencies]
vineyard = "*"

[dev-dependencies]
spectral = "*"
