[package]
name = "vineyard-polars"
version = { workspace = true }
description = "Vineyard Rust SDK: polars integration for DataFrame"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard_polars"
path = "src/lib.rs"

[dependencies]
arrow2 = { version = "0.17", features = ["arrow"] }
polars-core = "0.32"
ndarray = "0.15"
vineyard = { workspace = true }

[dev-dependencies]
spectral = "*"
