[package]
name = "vineyard"
version = "0.16.2"
description = "Vineyard Rust SDK"
homepage = "https://github.com/v6d-io/v6d"
repository = "https://github.com/v6d-io/v6d"
license = "Apache-2.0"
keywords = [ "vineyard" ]
include = [
    "src/**/*.rs",
    "Cargo.toml",
]
edition = "2021"

[features]
default = ["nightly"]
nightly = []

[lib]
name = "vineyard"
path = "src/lib.rs"

[dependencies]
arrow = "45"
arrow-array = "45"
ctor = "0.2"
downcast-rs = "1.2"
env_logger = "0.9"
gensym = "0.1"
lazy_static = "1"
log = "0.4"
memmap2 = "0.7"
num-traits = "0.2"
num-derive = "0.4"
parking_lot = "0.12"
rand = "0.8"
sendfd = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
static_str_ops = "0.1.2"
thiserror = "1.0"

[dev-dependencies]
spectral = "*"
